flicker fix 1

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@ body {
 
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; 
-    overflow-x: hidden;/* for Firefox */
+    overflow: hidden;/* for Firefox */
     overflow-y: scroll;
 }
 
@@ -37,7 +37,7 @@ body::-webkit-scrollbar {
 .background {
     position: fixed;
 
-    background: linear-gradient(var(--french-gray), var(--pure-white));
+    background: linear-gradient(var(--pure-white), var(--french-gray));
     background-repeat: no-repeat;
     background-position: center;
     
@@ -52,7 +52,6 @@ body::-webkit-scrollbar {
 
     left: 0;
     right: 0;
-
 }
 
 .faces {
